--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\admin\\envs\\test\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\admin\\anaconda3tryagain\\python.exe"
 }
